force-app/main/default/objects/EYI_Deviation_Proposed_Plan__c/EYI_Deviation_Proposed_Plan__c.object-meta.xml
<CustomObject>
    <label>Deviation Proposed Plan</label>
    <nameField>
        <displayFormat>DPP-{00000}</displayFormat>
        <label>Deviation Proposed Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deviation Proposed Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>