force-app/main/default/objects/EYI_Deviation_Proposed_Plan__c/fields/EYI_DAF_Usage_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_DAF_Usage_Code__c</fullName>
    <label>DAF Usage Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>