force-app/main/default/objects/EYI_Deviation_Proposed_Plan__c/fields/EYI_Deviation_Plan__c.field-meta.xml
<CustomField>
    <fullName>EYI_Deviation_Plan__c</fullName>
    <label>Deviation Plan</label>
    <referenceTo>EYI_Deviation_Plan__c</referenceTo>
    <relationshipLabel>Deviation Proposed Plans</relationshipLabel>
    <relationshipName>Deviation_Proposed_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>