force-app/main/default/objects/EYI_Deviation_Proposed_Plan__c/fields/EYI_Proposed_Plan_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Proposed_Plan_Amount__c</fullName>
    <label>Proposed Plan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>