force-app/main/default/objects/EYI_Deviation_Proposed_Plan__c/fields/EYI_Proposed_Plan_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Proposed_Plan_Date__c</fullName>
    <label>Proposed Plan Date</label>
    <type>Date</type>
</CustomField>